# papers-fetcher

./: .gitignore  README.md  pyproject.toml  results.csv
papers_fetcher/: cli.py  fetcher.py
